Make linguist's source viewer read all files as UTF-8.

It currently loads source files as latin1, which means unicode
characters are not supported.

4944ea0586 removes -codecfortr and hence the ability to specify an
encoding. lupdate will then treat all code as UTF-8, so this patch
does that too.

Task-number: QTBUG-27238

Change-Id: Iefed45de5b4925fee267834a5ed93457fc45b700
Reviewed-by: Debao Zhang <hello@debao.me>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>